# stttts-implementations

./: .gitignore  README.md  pyproject.toml
scripts/: run_stt_deepgram.sh  run_stt_yandex.sh  yandex_prepare_contract.sh
src/: micreader.py
src/impl_deepgram/: main.py
src/impl_yandex/: stt.py
src/yandex_contract/google/api/: annotations_pb2.py  annotations_pb2_grpc.py  http_pb2.py  http_pb2_grpc.py
src/yandex_contract/google/rpc/: status_pb2.py  status_pb2_grpc.py
src/yandex_contract/yandex/cloud/: validation_pb2.py  validation_pb2_grpc.py
src/yandex_contract/yandex/cloud/ai/stt/v3/: stt_pb2.py  stt_pb2_grpc.py  stt_service_pb2.py  stt_service_pb2_grpc.py
src/yandex_contract/yandex/cloud/api/: operation_pb2.py  operation_pb2_grpc.py
src/yandex_contract/yandex/cloud/operation/: operation_pb2.py  operation_pb2_grpc.py
tst/: try_micreader.py  try_stt_yandex.py
